# fem-mesh

./: CMakeLists.txt  README.md  main.cpp  meshclass.cpp  meshclass.hpp  meshtest
.github/workflows/: ci.yml
include/: bimap.hpp  configclass.hpp  fem.hpp  function.hpp  meshclass.hpp  quadrature.hpp
source/: fem.cpp  function.cpp  main.cpp  meshclass.cpp  quadrature.cpp
study/: convergence.ipynb  data.csv
tests/: meshtests.cpp
